--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
     "typescript": "~5.4.0",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.8",
     "vue-tsc": "^2.0.11"
   }
