--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
+    "mdi-vue": "^3.0.13",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
