add lazyloading library for images

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mdi-vue": "^3.0.13",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
